[package]
name = "mini_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustblockchainlib"
path = "src/lib.rs"

[[bin]]
name = "mini_blockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = "0.3.4"
ed25519-dalek = "=1.0.0-pre.3"
rand = "0.7.3"
